--- a/style.css
+++ b/style.css
@@ -12,11 +12,7 @@ h3{
     font-weight: 400;
 }
 .details{
-    color: gray;
     font-size: 0.8em;
-}
-#logo{
-    /*  */
 }
 em{
     color: #A5B4FC;
@@ -37,7 +33,39 @@ li{
     font-size: 1em;
 }
 .link{
+    color:aliceblue;
     text-decoration: none;
     font-size: 1em;
     font-family: manrope;
+}
+body{
+    background:linear-gradient(to right, #410e42, #0b0533);
+    color: aliceblue;
+}
+.div_top, .div_bott{
+    color:black;
+    background-color: white;
+    background-size: cover;
+    background-attachment: local;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+.png{
+    width: 2%;
+}
+
+.RL{
+    width: 20%;
+}
+
+#logo{
+    width: 4%;
+}
+
+.port{
+    background:linear-gradient(#8E86B5, #ACAEED);
+    font-family: manrope;
+    color: white;
 }
