--- a/test/style.css
+++ b/test/style.css
@@ -1,3 +1,9 @@
+
+body{
+    background:linear-gradient(to right, #410e42, #0b0533);
+    color: aliceblue;
+}
+
 h1{
     color:#A5B4FC;
     font-size: 3.5em;
@@ -12,42 +18,46 @@ h3{
     font-family: montserrat;
     font-weight: 400;
 }
-.details{
-    font-size: 0.8em;
-}
-em{
-    color: #A5B4FC;
-    font-size: 1em;
-}
 
 p{
     font-family: manrope;
     font-size: 1.1em;
 }
+
+em{
+    color: #A5B4FC;
+    font-size: 1em;
+}
+
+
 li{
     font-family: manrope;
     font-size: 1em;
 }
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
 .link{
     color:aliceblue;
     text-decoration: none;
     font-size: 1em;
     font-family: manrope;
 }
-body{
-    background:linear-gradient(to right, #410e42, #0b0533);
-    color: aliceblue;
+.link:hover{
+    text-decoration: underline;
+    color: pink;
 }
+
 .div_top, .div_bott{
     color:black;
     background-color: white;
     background-size: cover;
     background-attachment: local;
 }
-a{
-    color: black;
-    text-decoration: none;
-}
+
 .png_a{
     width: 2%;
     background: linear-gradient( #8E86B5, #ACAEED);
@@ -55,16 +65,41 @@ a{
     border-radius: 0.5em;
     box-shadow: 0.4em .4em 0em #0b0533;
 }
+.png_a:hover{
+    width: 2.3%;
+    background:linear-gradient(#696484, #8788BA);
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 0.6em .6em 0em #0b0533;
+
+}
+.pmg_a:active{
+    width: 1%;
+    background:linear-gradient(#696484, #8788BA);
+    opacity: 100%;
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 0.2em 0.2em 0em #0b0533;
+}
 .png{
     width: 2%;
 }
 
 .RL{
     width: 20%;
+    border-radius: 50em;
+}
+
+.RL:hover{
+    opacity: 90%;
+    /* rotate: y 180deg; */
 }
 
 #logo{
     width: 4%;
+}
+#logo:hover{
+    opacity: 50%;
 }
 
 .port{
@@ -72,4 +107,19 @@ a{
     font-family: manrope;
     color: white;
     border-radius: 0.5em;
+}
+
+.port:hover{
+    background:linear-gradient(#696484, #8788BA);
+}
+
+.details{
+    font-size: 0.8em;
+}
+a:focus{
+    background-color: #ACAEED;
+
+}
+a:visited{
+    /* color:pink; */
 }
