--- a/test/style.css
+++ b/test/style.css
@@ -1,7 +1,10 @@
 
+
 body{
     background:linear-gradient(to right, #410e42, #0b0533);
     color: aliceblue;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
 }
 
 h1{
@@ -13,7 +16,7 @@ h1{
 }
 h2{
     font-family: montserrat;
-    text-decoration: underobbie_pictureine;
+    text-decoration: underline;
 }
 h3{
     font-family: montserrat;
@@ -47,6 +50,21 @@ a:focus{
 header, footer{
     padding: 1em 3em 1em 3em;
     margin: 5em 3em 1em 3em;
+}
+
+td, th{
+    border: 0.1em solid #8788BA;
+    padding: 2.5% 5% 2.5% 5%;
+    width: 15%;
+    text-align: center;
+}
+table{
+    border-collapse: collapse;
+    margin:auto;
+}
+caption{
+    margin-bottom: 5%;
+    font-size: 2em;
 }
 
 .block{
@@ -90,7 +108,7 @@ header, footer{
 header{
     position:sticky;
     top:0;
-    z-index: 2;
+    z-index: 3;
 }
 
 .about_png{
@@ -120,17 +138,53 @@ header{
     width: 2%;
 }
 
-.robbie_picture{
+.rotation{
     width: 20%;
     border-radius: 50em;
-    /* float: left; */
-    /* margin: 8% 10% 0 5%; */
+    border: auto solid black;
+    align-items: center;
     margin: auto;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    position: relative;
+}
+
+.robbie_picture{
+    border-radius: 50%;
+    margin: auto;
+    object-fit: cover;
+    position: relative;
+    top:101.5%;
+    z-index: 2;
+    opacity: 1;
+    transition: opacity 0.5s;
 }
 
 .robbie_picture:hover{
-    opacity: 90%;
-    /* rotate: y 180deg; */
+    opacity: 0%;
+
+    transition: opacity 0.3s;
+}
+
+.dm{
+    background:linear-gradient(#696484, #8788BA);
+    color: aliceblue;
+    border-radius: 50em;
+    margin: auto;
+    object-fit: cover;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 50%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+    z-index: 1;
 }
 
 #logo{
@@ -204,12 +258,17 @@ header{
     grid-template-rows: 1fr 1fr;
 }
 
+.preview_pictures{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
 .pic {
     background-color: aliceblue;
     border-radius: 10px;
     border: auto solid black;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin: auto;
     margin-top: 2.5em;
     margin-bottom: 2.5em;
@@ -220,14 +279,19 @@ header{
     position: relative;
 }
 
-.pf_title {
+.pf_title, .preview_title{
     color: #0b0533;
     background-color: aliceblue;
     margin: 5% 0 0 5%;
 }
 
-.pf {
+.preview_title{
+    text-align: center;
+}
+.pf, .preview{
     background-color: aliceblue;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 .pic1 {
@@ -272,6 +336,20 @@ header{
     grid-row-end: 3;
 }
 
+.pic7 {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.pic8 {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
 .pic:hover {
     opacity: 50%;
 }
@@ -294,3 +372,5 @@ header{
 .pic:hover .hover_text {
     opacity: 1;
 }
+
+
