--- a/test/style.css
+++ b/test/style.css
@@ -67,6 +67,44 @@ caption{
     font-size: 2em;
 }
 
+input, textarea, label{
+    font-family: manrope;
+    font-size: 1em;
+    margin:auto;
+}
+
+form{
+    display: grid;
+    width: 100%;
+    margin: 5% auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    padding: 2em;
+}
+
+.field{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.f_name{
+    grid-column: 1 / 2;
+}
+
+.l_name{
+    grid-column: 2 / 3;
+}
+
+.mail_address{
+    grid-column: 1 / 3;
+}
+
+.message{
+    grid-column: 1 / 3;
+}
+
+
 .block{
     text-align: justify;
     width: auto;
@@ -263,7 +301,7 @@ header{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
-.pic {
+.pic{
     background-color: aliceblue;
     border-radius: 10px;
     border: auto solid black;
