--- a/test/style.css
+++ b/test/style.css
@@ -67,44 +67,60 @@ caption{
     font-size: 2em;
 }
 
-input, textarea, label{
+input, textarea, label {
     font-family: manrope;
     font-size: 1em;
-    margin:auto;
+    margin: auto;
 }
 
-form{
+form {
     display: grid;
-    width: 100%;
-    margin: 5% auto;
+    width: 60%; 
+    margin: 5% auto; 
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     padding: 2em;
+    gap: 1em;
+    box-sizing: border-box;
 }
 
-.field{
+.field {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.f_name{
-    grid-column: 1 / 2;
+.f_name, .l_name {
+    grid-column: span 1;
 }
 
-.l_name{
-    grid-column: 2 / 3;
+.mail_address, .message {
+    grid-column: span 2;
 }
 
-.mail_address{
-    grid-column: 1 / 3;
+input[type="text"], textarea {
+    width: 100%;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
-.message{
-    grid-column: 1 / 3;
+textarea {
+    resize: horizontal vertical; 
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
+label {
+    margin-bottom: 0.5em;
+    font-weight: bold;
+}
 
+.form_title{
+    text-align: center;
+    text-decoration: none;
+}
 .block{
     text-align: justify;
     width: auto;
@@ -115,7 +131,6 @@ form{
     padding: 1.5em;
     padding-top: 0.25em;
     padding-left: 0em;
-    /* background:linear-gradient(#8E86B5, #ACAEED); */
 }
 
 .link{
@@ -190,39 +205,50 @@ header{
     position: relative;
 }
 
-.robbie_picture{
+.robbie_picture {
     border-radius: 50%;
     margin: auto;
     object-fit: cover;
-    position: relative;
-    top:101.5%;
+    position: absolute; /* Change to absolute to stack with .dm */
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
     z-index: 2;
     opacity: 1;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s, transform 0.5s; /* Add transform transition */
 }
 
-.robbie_picture:hover{
-    opacity: 0%;
-
-    transition: opacity 0.3s;
+.robbie_picture:hover {
+    opacity: 0; /* Hide the image */
+    z-index:1;
 }
 
-.dm{
-    background:linear-gradient(#696484, #8788BA);
+.dm {
+    background: linear-gradient(#696484, #8788BA);
     color: aliceblue;
     border-radius: 50em;
     margin: auto;
     object-fit: cover;
-    position: relative;
+    position: absolute; /* Change to absolute to stack with .robbie_picture */
     top: 0;
     left: 0;
-    right: 50%;
-    bottom: 0;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
-    opacity: 1;
-    transition: opacity 0.5s ease;
-    z-index: 1;
+    align-items: center;
+    opacity: 0; /* Initially hidden */
+    transition: opacity 0.5s ease; /* Add transition for opacity */
+}
+
+.rotation:hover .dm {
+    opacity: 1; /* Show the link when hovered */
+    z-index: 2;
+}
+
+.dm_text{
+    color: aliceblue;
 }
 
 #logo{
@@ -286,8 +312,8 @@ header{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: left;
-    align-items: baseline;
+    justify-content: space-between;
+    align-items: center;
     justify-items: center;
 }
 .pictures {
